--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "translation:check": "ACTION=check node tasks/translation.js"
   },
   "dependencies": {
+    "appcenter": "3.0.1",
+    "appcenter-analytics": "3.0.1",
+    "appcenter-crashes": "3.0.1",
     "events": "1.1.0",
     "flux": "2.1.1",
     "invariant": "2.2.0",
